# combat_sim

./: CMakeLists.txt  army  main  main.cpp
include/: Game.h  army.h
src/: CMakeLists.txt  Game  Game.cpp  army  army.cpp
test/: CMakeLists.txt
